infrastructure/k8s/utils/ingress/endpoints.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: endpoints
  annotations:
    # Si tenías anotaciones de nginx aquí, las hemos quitado.
    # Traefik leerá este Ingress automáticamente por la clase.
    linkerd.io/inject: enabled
    # Evita que Traefik aplique redirecciones o middlewares globales
    traefik.ingress.kubernetes.io/router.middlewares: ""
    # Asegura que solo escuche en el puerto 80 (HTTP) que viene del túnel
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik # <--- CAMBIO CLAVE: de 'public' a 'traefik'
  rules:
    - host: api.thisjowi.uk
      http:
        paths:
          - path: /api/v1/auth
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 80
          - path: /api/v1/notes
            pathType: Prefix
            backend:
              service:
                name: notes
                port:
                  number: 80
          - path: /api/v1/passwords
            pathType: Prefix
            backend:
              service:
                name: password
                port:
                  number: 80
          - path: /api/v1/otp
            pathType: Prefix
            backend:
              service:
                name: otp
                port:
                  number: 80
          - path: /api/v1/messages
            pathType: Prefix
            backend:
              service:
                name: messages
                port:
                  number: 80
